fix id handling in getRelativeFeedId; allow on-catchup-show-next wrapping (closes #108)

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -140,7 +140,7 @@ div.postReply div.postIcon {
 ul.feedList {
 	list-style-type : none;
 	margin : 5px;
-	padding : 0px 0px 0px 10px;
+	padding : 0px 0px 0px 5px;
 	font-size : small;
 }
 
@@ -161,7 +161,7 @@ ul.feedList li.feedCat a:hover {
 
 ul.feedCatList {
 	list-style-type : none;
-	margin : 0px 0px 0px 20px;
+	margin : 0px 0px 0px 15px;
 	padding : 0px;  
 }
 
@@ -343,9 +343,10 @@ td.notifyBox {
 }
 
 #dispSwitch {
-	padding : 5px 5px 5px 0px;
 	font-size : x-small;
 	text-align : right;
+	float : right;
+	margin : 5px 5px 0px 0px;
 }
 
 #dispSwitch a {
@@ -1247,7 +1248,7 @@ div.whiteBox {
 	right : 5px;
 	height : 40px;
 	color : #4684ff;
-	font-size : x-small;
+	font-size : small;
 }
 
 #feeds-holder {
